正しいJSONレスポンスに修正

--- a/config/fugumt_translator.ini
+++ b/config/fugumt_translator.ini
@@ -33,7 +33,7 @@ use_cache = true
 # 半精度浮動小数点（16bit）による高速化機能（GPU使用時のみ有効）
 # trueでメモリ使用量半減・処理速度向上、falseで標準精度（32bit）維持
 # 翻訳品質への影響は軽微だが、古いGPUでは対応していない場合がある
-use_fp16 = true
+use_fp16 = false
 
 [LOGGING]
 level = INFO
